Revision history for Perl extension Params::CallbackRequest.

1.17

1.16  2007-03-26T21:25:17
      - Fixed a bug detecting mod_perl2. Reported by Jimmy Li.
      - Fixed a bug in the redirect() method under mod_perl2. Report and fix
        from Jimmy Li.

1.15  2006-05-26T21:28:55
      - Added the 'requester' attribute to Params::Callback. This can be
        specified by passing the 'requester' parameter to request(), and can
        be anything.

1.14  2006-03-02T20:07:28
      - Removed an unnecessary eval block around the loading of Class::ISA
        and Attribute::Handlers that would prevent the failure of either of
        those modules to load to propagate.
      - Fixed typo in the Synopsis spotted by Scott Lanning.
      - Added support for mod_perl2, as well as mod_perl 1 and mod_perl 1.99.

1.13  2004-04-20T18:29:37
      - Apache 2 compatability added thanks to Fred Moyer.

1.12  2004-03-15T15:27:54
      - No longer using a Params::Validate callback to transform a value,
        since that's not a supported feature of Params::Validate and it led
        to problems on some platforms.

1.11  Wed Oct  8 19:27:32 2003
      - Fixed execution of pre and post callbacks so that they execute in the
        order in which they're declared. Thanks to Perl 5.8.1 for rubbing my
        nose in this one!

1.10  Mon Sep  8 21:15:42 2003
      - Code moved over from MasonX::ApacheHandler::WithCallbacks, which is
        deprecated. Differences from that class are as follows.
      - Code from MasonX::ApacheHandler::WithCallbacks has been migrated to
        Params::CallbackRequest.
      - Code from MasonX::CallbackHandler has been migrated to
        Params::Callback.
      - MasonX::CallbackTester has been removed, since it isn't necessary
        in a non-mod_perl environment.
      - Created Params::CallbackRequest::Exceptions to create all of the exception
        classes used by Params::CallbackRequest. These no longer inherit from